Improve build process and add GitLab OTA update documentation